# notebook

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  common_bash_functions.sh  copy_file_from_remote_git_repo.sh  docker_daemon.json  docker_entrypoint.sh  entrypoint.sh  jenkins_properties.groovy  locust.conf  locustfile.py  mkdocs.yml  mypy.ini  pip.conf  pyproject.toml  pytest.ini  readme_from_gitlab.md  requirements.txt  setup.cfg  ubuntu_py310_requirements.txt
airflow/dags/: 001_start_boilerplate_app_container.py
airflow/dags/bash_scripts/: 001_start_boilerplate_app_container.sh
airflow/install_scripts/: .dockerignore  Dockerfile  airflow_install_from_pipy.sh  docker_build_airflow_local.sh  docker_run_airflow_local.sh  install_airflow_from_pipy.sh  pip.conf  requirements.txt
docs/: custom_logger.md  index.md
kubernetes/deployment/: deployment.yaml
kubernetes/deployments/: deployment.yaml
kubernetes/examples/ingress/: ingress.yaml
kubernetes/examples/job/: cronjob.yaml  job.yaml
kubernetes/examples/network_policy/: network_policy.yaml
kubernetes/examples/pod/: pod.yaml  pod_ubuntu_sleeper.yaml
kubernetes/examples/service/: service.yaml
kubernetes/examples/statefulset/: statefulset.yaml
kubernetes/ingress/: ingress.yaml
kubernetes/jobs/: cronjob.yaml  job.yaml
kubernetes/network_policy/: network_policy.yaml
kubernetes/persistent_volume/: pv.yaml  pvc.yaml  sc.yaml
kubernetes/pod/: pod.yaml
kubernetes/rbac/: developer_role.yaml  devuser_developer_binding.yaml
kubernetes/replicaset/: replicaset.yaml
kubernetes/replicasets/: replicaset.yaml
kubernetes/resource_quota/: compute_quota.yaml
kubernetes/secrets_definitions/: my_app_secret_data.yaml
kubernetes/service/: headless_service.yaml  service-definition.yaml
kubernetes/statefulset/: statefulset.yaml  statefulset_w_pvc.yaml
misc/: __init__.py  convert_milliseconds.py  func_args_kwargs.py
misc/grokking_algorithms/: task4_1_sum_list_elements.py  task4_2_count_list_elements.py  task4_3_find_largest_num_in_list.py
misc/leetcode/easy/: divmod_palindrom_number.py
misc/package_how_imports_work/: __init__.py  main.py
misc/package_how_imports_work/subpackage_one/: __init__.py  module_one.py
misc/package_how_imports_work/subpackage_two/: __init__.py  module_one.py  module_two.py
package_scripts/: build_run_docs.sh  common_bash_functions.sh  docker_postgres_init.sql
package_scripts/docker/: 00_docker_build_local.sh  01_docker_run_local.sh  02_docker_push_local.sh  run_cadvisor.sh
package_scripts/envs/: 00_proj_init_run_once.sh  01_install_app_dependencies.sh  01_set_up_env_proj_init.sh  02_install_lint_test_dependencies.sh  03_install_type_test_dependencies.sh  04_install_unit_test_dependencies.sh  05_install_docs_dependencies.sh  06_install_dev_dependencies.sh  set_up_env_proj_init.sh
package_scripts/single_module_launchers/: sml_config.py
requirements/compiled/: 01_app_requirements.txt  01_app_requirements_ubuntu_py310.txt  02_lint_test_requirements.txt  02_lint_test_requirements_ubuntu_py310.txt  03_type_test_requirements.txt  03_type_test_requirements_ubuntu_py310.txt  04_unit_test_requirements.txt  04_unit_test_requirements_ubuntu_py310.txt  05_docs_requirements.txt  05_docs_requirements_ubuntu_py310.txt  06_dev_requirements.txt
requirements/in/: 00_proj_init.in  01_app.in  02_lint_test.in  03_type_test.in  04_unit_test.in  05_docs.in  06_dev.in
src/: sml_custom_logger.py
src/boilerplate/: __init__.py  _version.py  app.py  config.py  custom_logger.py  dependencies.py  package_helpers.py  pydantic_helpers.py  sentry.py  server.py
src/boilerplate/routers/: admin_controller.py
src/boilerplate/schemas/: common_schemas.py
tests/: test_pydantic_helpers.py
