[build-system]
requires = [
    "setuptools>=60",
    "wheel",
    "setuptools_scm>=6.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/boilerplate/_version.py"

[tool.mypy]
# See: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
files = [
    "src/boilerplate",
    "tests"
]
exclude = [
    '^src\/boilerplate\/__init__\.py$',
    '^alembic\/env\.py$'
]

python_version = "3.10"  # specify major Python version.
follow_imports = "silent"
disable_error_code = "attr-defined"
verbosity = 0
show_error_codes = true
pretty = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true # for strict mypy

warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
# See: https://pydantic-docs.helpmanual.io/mypy_plugin/#plugin-settings
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "fastapi",
    "typeguard",
    "src.boilerplate.*",
]
ignore_missing_imports = true
