#
# Setup Configuration File
#
# Read more about `setup.cfg` here:
# - https://docs.python.org/3/distutils/configfile.html
# - https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#

[metadata]
name = boilerplate
version = attr: boilerplate.VERSION
description = Project description.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = Apache License
url = https://gitlab.com/viacheslavkolupaev/notebook
project_urls =
    Jira = https://<enter-the-correct-url>/
    Confluence = https://<enter-the-correct-url>/
    Staging = https://<enter-the-correct-url>/
    Production = https://<enter-the-correct-url>/
classifiers =
    Programming Language :: Python :: 3.10
keywords =
    python
    api
author = Viacheslav Kolupaev

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = boilerplate
python_requires = >=3.10
install_requires =
    aiodns
    aiohttp
    alembic
    asyncpg
    databases[postgresql]
    fastapi
    orjson
    psycopg2-binary
    pydantic
    sentry-sdk
    sqlalchemy
    tenacity
    typeguard
    ujson
    uvicorn[standard] <=0.17.5

[options.packages.find]
where = src
;include = optional, specify which packages to include
;exclude = optionally specify which package to exclude

[options.extras_require]
toml = toml
testing =
    pytest
coverage = pytest-cov

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show_source = True
statistics = False
doctests = True

# Plugins:
max_complexity = 6
max_line_length = 120
max-doc-length = 120

# WPS219
max-access-level = 7

#WPS201
max-imports = 14

# Wemake violations: https://wemake-python-stylegui.de/en/0.15.3/pages/usage/violations/
# Disable some checks:
ignore = D100, D104, D106, D401, W504, X100, RST303, RST304, DAR103, DAR203, WPS305, WPS114

filename = *.py

# Excluding some directories:
exclude =
    .svn,
    CVS,
    .bzr,
    .hg,
    .git,
    __pycache__,
    .tox,
    .nox,
    .eggs,
    *.egg,
    .hypothesis,
    .pytest_cache,
    .mypy_cache,
    .venv
    venv,
    venv_py38,
    venv_py39,
    venv_py310,
    docs,
    site,
    setup.py,

    # Forced exclusion of existing files from checks. New files will be checked.
    src/boilerplate/__init__.py
    alembic/env.py

# Ignoring some errors in some files:
per_file_ignores =
# Enable `assert` keyword and magic numbers for tests:
    tests/*.py: S101, WPS226, WPS432
    hooks/*.py: WPS226

# Wemake options: https://wemake-python-stylegui.de/en/latest/pages/usage/configuration.html
i-control-code = True

[isort]
# Documentation: https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = True
use_parentheses = True
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = 120

[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long

[coverage:run]
branch = True
omit =
    tests/*, app/main.py, app/version.py

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
show_missing = True
