##########################################################################################
# Copyright (c) 2022. Viacheslav Kolupaev, https://vkolupaev.com/
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
# file except in compliance with the License. You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the specific language governing
# permissions and limitations under the License.
##########################################################################################

##########################################################################################
# Setup Configuration File of the Python project.
#
# Read more about `setup.cfg` here:
# - https://docs.python.org/3/distutils/configfile.html
# - https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
##########################################################################################

[metadata]
name = boilerplate
version = attr: boilerplate.VERSION
description = Project description.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = Apache License
url = https://gitlab.com/viacheslavkolupaev/notebook
project_urls =
    Jira = https://<enter-the-correct-url>/
    Confluence = https://<enter-the-correct-url>/
    Staging = https://<enter-the-correct-url>/
    Production = https://<enter-the-correct-url>/
classifiers =
    Programming Language :: Python :: 3.10
keywords =
    python
    api
author = Viacheslav Kolupaev

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = boilerplate
python_requires = >=3.10
install_requires =
    aiodns
    aiohttp
    alembic
    asyncpg
    databases[postgresql]
    fastapi
    orjson
    psycopg2-binary
    pydantic
    sentry-sdk
    sqlalchemy
    tenacity
    typeguard
    ujson
    uvicorn[standard] <=0.17.5

[options.packages.find]
where = src
;include = optional, specify which packages to include
;exclude = optionally specify which package to exclude

[options.extras_require]
toml = toml
testing =
    pytest
coverage = pytest-cov

[flake8]
# Base flake8 configuration: https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show_source = True
statistics = False
doctests = True
filename = *.py
docstring-convention = google

# flake8 options: https://flake8.pycqa.org/en/4.0.1/user/options.html
max-line-length = 120
max-doc-length = 120

# WPS configuration: https://wemake-python-stylegui.de/en/latest/pages/usage/configuration.html
i-control-code = True
nested-classes-whitelist =
    Config

# Ignore some violations: https://wemake-python-stylegui.de/en/0.16.1/pages/usage/violations/
ignore =
    E121,
    E123,
    E126,
    E133,
    E226,
    E241,
    E242,
    E704,
    W503,
    W504,
    W505

# Excluding some directories:
exclude =
    .*,
;    .cache/pip,
;    .git,
;    .hypothesis,
;    .svn,
;    .local,
;    .mypy_cache,
;    .pytest_cache,
;    .bzr,
;    .hg,
;    .tox,
;    .nox,
;    .eggs,
;    *.egg,
;    .venv
    CVS,
    __pycache__,
    venv,
    venv_py??,
    venv_py???,
;    venv_py38,
;    venv_py39,
;    venv_py310,
    docs,
    site,
    ${env.WORKSPACE},

    # Forced exclusion of existing files from checks. New files will be checked.
    setup.py,
    src/boilerplate/__init__.py
    alembic/env.py

# Ignoring some errors in some files:
per_file_ignores =
    # Enable `assert` keyword and magic numbers for tests:
    tests/*.py: S101, WPS226, WPS432
    hooks/*.py: WPS226

    # WPS226 Found string literal over-use: extra > 3
    src/boilerplate/custom_logger.py: WPS226

    # WPS115 Found upper-case constant in a class DB_HOST
    # WPS432 MagicNumberViolation
    src/boilerplate/config.py: WPS115, WPS432

    # WPS226 Found string literal over-use: description > 3
    # DAR201 Missing "Returns" in Docstring: - return
    src/boilerplate/routers/*.py: WPS226, DAR201

[isort]
# Documentation: https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = True
use_parentheses = True
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = 120

[darglint]
# Documentation: https://github.com/terrencepreilly/darglint
strictness = short
docstring_style = google

# Disable linting on all private methods.
ignore_regex = ^_(.*)

[pydocstyle]
convention = google

[coverage:run]
branch = True
omit =
    tests/*,
    app/main.py,
    app/version.py

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
show_missing = True
